@@ -1,3 +1,8 @@
+2012-03-30  Thomas Quinot  <quinot@adacore.com>
+
+	* freeze.adb (Freeze_Record_Type): For a type with reversed bit
+	order and reversed storage order, disable front-end relayout.
+
 2012-03-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc-interface/decl.c (gnat_to_gnu_entity) <E_Record_Subtype>: Copy
